# sam-template-rs

./: README.md  cookiecutter.json
al2/template-1/: cookiecutter.json
al2/template-1/{{ cookiecutter.project_slug }}/: Cargo.toml  template.yaml
template-1/: cookiecutter.json
template-1/{{ cookiecutter.project_slug }}/src/: main.rs
{{ cookiecutter.project_slug }}/: Cargo.toml  template.yaml
{{ cookiecutter.project_slug }}/events/: event.json
{{ cookiecutter.project_slug }}/src/: main.rs
